--- a/cvt.tex
+++ b/cvt.tex
@@ -1,5 +1,6 @@
-\section{Abstract}\label{cvtsec:abs}
-	\input{./cvt/abstract}
+\input{./cvt/chapnom}
+
+\input{./cvt/abstract}
 
 \section{Introduction}\label{cvtsec:int}
 	\input{./cvt/introduction}
@@ -12,12 +13,12 @@
 	\label{cvtsec:met}
 	\input{./cvt/method}
 
-\section{Numerical results}\label{cvtsec:num}
+\section{Numerical Results}\label{cvtsec:num}
 	\input{./cvt/experiment}
 
 \section{Conclusion}\label{cvtsec:con}
 	\input{./cvt/conclusion}
 	
 \vfill
-% \section{Acknowledgments}\label{cvtsec:ack}
+
 \noindent\textbf{Acknowledgments.} \input{./cvt/acknowledgments}
