--- a/lrtm.tex
+++ b/lrtm.tex
@@ -1,5 +1,6 @@
-\section{Abstract}\label{lrtmsec:abs}
-	\input{./lrtm/abstract}
+\input{./lrtm/chapnom}
+
+\input{./lrtm/abstract}
 
 \section{Introduction}\label{lrtmsec:int}
 	\input{./lrtm/introduction}
