--- a/lrtm/abstract.tex
+++ b/lrtm/abstract.tex
@@ -7,7 +7,7 @@ vocabularies grow, however, it becomes rapidly more expensive to store and run
 inference algorithms on co\hyp{}occurrence statistics. Current rectification
 techniques, which preprocess real data in order to overcome model-data mismatch,
 are even more expensive, as they require iterative projections that destroy
-sparsity of the co\hyp{}occurrence data. In this paper, we propose novel
+sparsity of the co\hyp{}occurrence data. In this chapter, we propose novel
 approaches that can simultaneously compress and rectify the co\hyp{}occurrence
 statistics, scaling gracefully with the size of vocabulary and the dimension of
 latent space. We also present new algorithms that are capable of learning latent
