--- a/lrtm/conclusion.tex
+++ b/lrtm/conclusion.tex
@@ -1,13 +1,14 @@
 Spectral algorithms provide an appealing alternative for identifying
-interpretable low-rank subspaces by simple factorizations of higher-order
-moments. But this simplicity is also a weakness: violations of modeling
-assumptions destroy performance unless they are handled through rectification,
-and the size of the moment matrices limits us to small vocabularies. In this
-paper, we developed an efficient and scalable framework: Low-Rank Joint
-Stochastic Matrix Factorization. We provide theoretical advances in compressed
-matrix factorization, leading to high-quality low-rank non-negative
-approximations without quadratic blowup. The method provides orders of magnitude
-speedups for rectification even on small vocabularies. Perhaps most importantly,
-we can now apply reliable, high-quality factorizations of high-dimensional data
-sets on laptop-grade hardware, massively increasing the applicability and
-potential use of these algorithms.
+interpretable low\hyp{}rank subspaces by simple factorizations of
+higher\hyp{}order moments. But this simplicity is also a weakness: violations of
+modeling assumptions destroy performance unless they are handled through
+rectification, and the size of the moment matrices limits us to small
+vocabularies. In this chapter, we developed an efficient and scalable framework:
+Low\hyp{}Rank Joint Stochastic Matrix Factorization. We provide theoretical
+advances in compressed matrix factorization, leading to high\hyp{}quality
+low\hyp{}rank non\hyp{}negative approximations without quadratic blowup. The
+method provides orders of magnitude speedups for rectification even on small
+vocabularies. Perhaps most importantly, we can now apply reliable,
+high\hyp{}quality factorizations of high\hyp{}dimensional data sets on 
+laptop\hyp{}grade hardware, massively increasing the applicability and potential
+use of these algorithms.
