--- a/ndos/experiments.tex
+++ b/ndos/experiments.tex
@@ -206,7 +206,7 @@ evenly to the spectrum according to PDOS.
   too large to compute exactly (1,965,206 nodes).}\label{fig:gallery}
 \end{figure}
 
-\subsection{Computation time}
+\subsection{Computation Time}
 
 In this experiment, we show the scaling of our methods by applying them to
 graphs of varying size of nodes, edges, and sparsity patterns. Rather than
