--- a/notation.tex
+++ b/notation.tex
@@ -54,8 +54,14 @@
 
 % Math accent
 
+\newcommand{\Bbreve}{\breve{B}}
+\newcommand{\Cbar}{\overline{C}}
 \newcommand{\Hhat}{\hat{H}}
 \newcommand{\Hdiag}{\hat{H}_{\diag}}
+\newcommand{\Xbar}{\overline{X}}
+\newcommand{\Ybar}{\overline{Y}}
+\newcommand{\Ztilde}{\widetilde{Z}}
+\newcommand{\rhat}{\hat{r}}
 
 \newcommand{\hhat}{\hat{h}}
 
@@ -138,6 +144,7 @@
 \newcommand{\numintitle}[1]{\texorpdfstring{#1}{}}
 \newcommand{\ph}{\phantom{ }}
 \newcommand{\todo}[1]{{\color{red}#1}}
+\newcommand{\ee}[1]{\mathrm{e}{#1}}
 
 % Color
 \definecolor{burgundy}{RGB}{140,0,26}
