--- a/sgp.tex
+++ b/sgp.tex
@@ -1,5 +1,6 @@
-\section{Abstract}\label{sgpsec:abs}
-	\input{./sgp/abstract}
+\input{./sgp/chapnom}
+
+\input{./sgp/abstract}
 
 \section{Introduction}\label{sgpsec:int}
 	\input{./sgp/introduction}
@@ -7,14 +8,20 @@
 \section{Background}\label{sgpsec:bac}
 	\input{./sgp/background}
 
-\section{Methods}\label{sgpsec:met}
+\section{Methods: Derivative-Free GPs}\label{sgpsec:met}
 	\input{./sgp/methods}
 
 \section{Error Properties}\label{sgpsec:err}
 	\input{./sgp/analysis}
 
-\section{Experiments}\label{sgpsec:exp}
+\section{Methods: GPs with Derivative Information}\label{sgpsec:dmet}
+	\input{./sgp/dmethods}
+
+\section{Experiments: Derivative-Free GPs}\label{sgpsec:exp}
 	\input{./sgp/experiments}
+
+\section{Experiments: GPs with Derivative Information}\label{sgpsec:dexp}
+	\input{./sgp/dexperiments}
 
 \section{Conclusion}\label{sgpsec:con}
 	\input{./sgp/conclusion}
