--- a/references.bib
+++ b/references.bib
@@ -1009,6 +1009,13 @@
   Year = {2011}
 }
 
+@misc{MatlabMTB,
+  key = {{MATLAB} Mapping Toolbox},
+  title = {{MATLAB} Mapping Toolbox},
+  year = {2017},
+  note = {The MathWorks, Natick, MA, USA}
+}
+
 @article{meijering1999image,
   title={Image reconstruction by convolution with symmetrical piecewise $n$th-order polynomial kernels},
   author={Meijering, Erik H.~W. and Zuiderveld, Karel J. and Viergever, Max A.},
@@ -1041,6 +1048,14 @@
   pages={1778--1784},
   year={2013}
 }
+
+@article{wathen2015spectral,
+  Author = {Wathen, Andrew J. and Zhu, Shengxin},
+  Journal = {Numer. Algor.},
+  Pages = {709--726},
+  Title = {On spectral distribution of kernel matrices related to radial basis functions},
+  Volume = {70},
+  Year = {2015}}
 
 @inproceedings{wu2017bayesian,
   Author = {Wu, Jian and Poloczek, Matthias and Wilson, Andrew G and Frazier, Peter},
@@ -1143,7 +1158,7 @@
 }
 
 @article{erosheva2003bayesian,
-author = {A. Erosheva, E},
+author = {Erosheva, Elena A.},
 year = {2003},
 month = {01},
 pages = {},
